test/Fail/Issue623/A.agda
module Issue623.A where

S : Set
S = S
